Fix hero image visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,7 @@ body {
 }
 
 .hero.with-image .hero-bg-image {
+    display: block;
     opacity: 1;
 }
 
